log/build_2024-04-22_12-25-53/uav_urdf_demo/stderr.log
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:64:5: error: ‘geometry_msgs_TransformStamped’ does not name a type
   64 |     geometry_msgs_TransformStamped transform_stamped;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:66:2: error: expected ‘;’ after class definition
   66 | }
      |  ^
      |  ;
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp: In constructor ‘StatePublisher::StatePublisher()’:
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:25:9: error: ‘transform_stamped’ was not declared in this scope
   25 |         transform_stamped.header.frame_id = "odom";
      |         ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp: In lambda function:
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:33:13: error: ‘transform_stamped’ is not captured
   33 |             transform_stamped.header.stamp = this->get_clock()->now();
      |             ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:28:36: note: the lambda has no capture-default
   28 |         auto timer_callback = [this]() -> void {
      |                                    ^
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:25:9: note: ‘<typeprefixerror>transform_stamped’ declared here
   25 |         transform_stamped.header.frame_id = "odom";
      |         ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:35:13: error: ‘transform_stamped’ is not captured
   35 |             transform_stamped.transform.translation.x = step * direction;
      |             ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:28:36: note: the lambda has no capture-default
   28 |         auto timer_callback = [this]() -> void {
      |                                    ^
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:25:9: note: ‘<typeprefixerror>transform_stamped’ declared here
   25 |         transform_stamped.header.frame_id = "odom";
      |         ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:36:13: error: ‘transform_stamped’ is not captured
   36 |             transform_stamped.transform.translation.y = 0;
      |             ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:28:36: note: the lambda has no capture-default
   28 |         auto timer_callback = [this]() -> void {
      |                                    ^
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:25:9: note: ‘<typeprefixerror>transform_stamped’ declared here
   25 |         transform_stamped.header.frame_id = "odom";
      |         ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:37:13: error: ‘transform_stamped’ is not captured
   37 |             transform_stamped.transform.translation.z = 0;
      |             ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:28:36: note: the lambda has no capture-default
   28 |         auto timer_callback = [this]() -> void {
      |                                    ^
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:25:9: note: ‘<typeprefixerror>transform_stamped’ declared here
   25 |         transform_stamped.header.frame_id = "odom";
      |         ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:39:13: error: ‘transform_stamped’ is not captured
   39 |             transform_stamped.transform.rotation.x = 0;
      |             ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:28:36: note: the lambda has no capture-default
   28 |         auto timer_callback = [this]() -> void {
      |                                    ^
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:25:9: note: ‘<typeprefixerror>transform_stamped’ declared here
   25 |         transform_stamped.header.frame_id = "odom";
      |         ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:40:13: error: ‘transform_stamped’ is not captured
   40 |             transform_stamped.transform.rotation.y = 0;
      |             ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:28:36: note: the lambda has no capture-default
   28 |         auto timer_callback = [this]() -> void {
      |                                    ^
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:25:9: note: ‘<typeprefixerror>transform_stamped’ declared here
   25 |         transform_stamped.header.frame_id = "odom";
      |         ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:41:13: error: ‘transform_stamped’ is not captured
   41 |             transform_stamped.transform.rotation.x = 0;
      |             ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:28:36: note: the lambda has no capture-default
   28 |         auto timer_callback = [this]() -> void {
      |                                    ^
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:25:9: note: ‘<typeprefixerror>transform_stamped’ declared here
   25 |         transform_stamped.header.frame_id = "odom";
      |         ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:42:13: error: ‘transform_stamped’ is not captured
   42 |             transform_stamped.transform.rotation.w = 1;
      |             ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:28:36: note: the lambda has no capture-default
   28 |         auto timer_callback = [this]() -> void {
      |                                    ^
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:25:9: note: ‘<typeprefixerror>transform_stamped’ declared here
   25 |         transform_stamped.header.frame_id = "odom";
      |         ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:45:43: error: ‘transform_stamped’ is not captured
   45 |             tf_broadcaster->sendTransform(transform_stamped);
      |                                           ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:28:36: note: the lambda has no capture-default
   28 |         auto timer_callback = [this]() -> void {
      |                                    ^
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:25:9: note: ‘<typeprefixerror>transform_stamped’ declared here
   25 |         transform_stamped.header.frame_id = "odom";
      |         ^~~~~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp: In constructor ‘StatePublisher::StatePublisher()’:
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:53:41: error: unable to find numeric literal operator ‘operator""ms’
   53 |         timer = this->create_wall_timer(30ms, timer_callback);
      |                                         ^~~~
make[2]: *** [CMakeFiles/state_publisher.dir/build.make:63: CMakeFiles/state_publisher.dir/src/state_publisher.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/state_publisher.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
